--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# DB_ENGINE=django.db.backends.postgresql
-# DB_NAME=interview_scheduler
-# DB_USER=postgres
-# DB_PASSWORD=admin
-# DB_HOST=localhost
-# DB_PORT=5432
+# Database Configuration
+# DB_ENGINE=django.db.backends.postgresql   # Replace with your DB engine, e.g., 'django.db.backends.mysql' for MySQL
+# DB_NAME=your_database_name               # Replace with your database name
+# DB_USER=your_database_user               # Replace with your database username
+# DB_PASSWORD=your_database_password       # Replace with your database password
+# DB_HOST=localhost                        # Replace with your database host, e.g., '127.0.0.1' or remote host IP
+# DB_PORT=5432                             # Replace with your database port, e.g., '5432' for PostgreSQL
